# Seeed-nRF52840-Sense-projects

./: .gitignore  Cargo.toml  README.md  build-and-flash.sh  build.rs  memory.x
.cargo/: config.toml
hello_world/: Cargo.toml
hello_world/src/: main.rs
src/: main.rs
usb_serial/: Cargo.toml
usb_serial/src/: main.rs
